--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"dependencies": {
 		"discord.js": "^14.11.0",
 		"dotenv": "^16.1.4",
+		"html-entities": "^2.3.6",
 		"jsonwebtoken": "^9.0.0",
 		"minecraft-items": "^0.4.3",
 		"mongodb": "^5.6.0",
